<resources>
    <string name="general_current_darts">Current Darts</string>
    <string name="general_round">Round</string>
    <string name="general_reset">Reset</string>
    <string name="general_miss">Miss</string>
    <string name="general_next">Next</string>
    <string name="general_hit">Hit</string>
    <string name="general_exercises">Exercises</string>
    <string name="general_statistics">Statistics</string>
    <string name="general_no_score">No score</string>
    <string name="general_hint">Hint</string>
    <string name="menu_title_general">General</string>
    <string name="menu_title_training">Training</string>
    <string name="menu_title_social">Social</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_exercises">Exercises</string>
    <string name="menu_item_statistics">Statistics</string>
    <string name="menu_item_rate">Rate the app</string>
    <string name="menu_item_privacy_policy">Privacy Policy</string>
    <string name="menu_item_imprint">Imprint</string>
    <string name="menu_item_ranking">Ranking</string>
    <string name="menu_item_achievement">Achievement</string>
    <string name="actionbar_title_main">Home</string>
    <string name="actionbar_title_trainings_overview">Sessions</string>
    <string name="actionbar_title_xoi_statistics">X01 Statistics</string>
    <string name="actionbar_title_hs_statistics">Highscore Statistics</string>
    <string name="actionbar_title_xx_statistics">99 Dart Statistics</string>
    <string name="actionbar_title_xoi_training">X01 Session</string>
    <string name="actionbar_title_hs_training">Highscore Session</string>
    <string name="actionbar_title_xx_training">99 Dart Session</string>
    <string name="excercise_dart_to_X">99 Darts to X</string>
    <string name="excercise_xoi">501</string>
    <string name="excercise_highscore">Highscore</string>
    <string name="dialog_finish_training_text">If you are finishing the current training, no data will be saved for this training. Finish anyway?</string>
    <string name="dialog_finish_training_finish">Finish</string>
    <string name="dialog_finish_training_close">Continue</string>
    <string name="dialog_new_training_title">Ready for another one?</string>
    <string name="dialog_new_training_text">You have successfully completed this training session. Do you want to start a new session?</string>
    <string name="dialog_new_training_new">New session</string>
    <string name="dialog_new_training_close">Close</string>
    <string name="statistics_no_data">There is no data for this exercise. To view a statistic, you must finish at least one unit of this exercise.</string>
    <string name="statistics_darts_to_x">99 Darts</string>
    <string name="statistics_hint_dialog_title">Statistics information</string>
    <string name="statistics_hint_dialog_button_text">OK</string>
    <string name="statistics_ppd">PPD - Points per dart\nShows all time average points you scored per dart.</string>
    <string name="statistics_pptd">PPTD - Points per three darts\nShows all time average points you scored with three darts.</string>
    <string name="statistics_cor">COR % - Checkout rate\nShows all time checkout rate in percentage.</string>
    <string name="statistics_dart_xoi">Darts\nAll time thrown darts in X01 exercises.</string>
    <string name="statistics_sixty_plus">60+\nShows all time three dart score count, between 60 and 100 points</string>
    <string name="statistics_hundret_plus">100+\nShows all time three dart score count, between 101 and 140 points</string>
    <string name="statistics_hundretfourty_plus">140+\nShows all time three dart score count, between 141 and 177 points.</string>
    <string name="statistics_hundret_eighty">180\nShows all time 180´s</string>
    <string name="statistics_avg_score">Avg. Score - Average Highscore result\nShows the average result for all Highscore excercises.</string>
    <string name="statistics_dart_hs">Darts\nAll time thrown darts in Highscore exercises.</string>
    <string name="statistics_hits">Hits - Average hits count\nShows the all time average hit count</string>
    <string name="statistics_hits_percentage">Hits % - Hit rate\nShows all time hit rate in percentage.</string>
    <string name="statistics_score">Score - Average score\nShows the all time average score.</string>
    <string name="statistics_single">Single - Single count\nShows the all time single hit score.</string>
    <string name="statistics_double">Score - Double count\nShows the all time double hit score.</string>
    <string name="statistics_triple">Score - Triple cout\nShows the all time triple hit score.</string>
    <string name="trainings_overview_xoi_hint_title">Hint</string>
    <string name="trainings_overview_xoi_hint_message">In the current version, the game mode is limited to X01 single-in double-out.</string>
    <string name="trainings_overview_xoi_hint_button_text">Understood</string>
    <string name="trainings_overview_xx_hint_message">In the current version, statistics are not yet differentiated by target numbers. That is why unfortunately no selection of the target is available yet.</string>
    <string name="xx_chooser_button_title">Choose this target</string>
    <string name="xx_chooser_title">Choose the target for the exercise</string>
    <string name="xoi_chooser_title">Choose your start value for this exercise</string>
    <string name="xoi_chooser_button_title">Choose this start value</string>
    <string name="statistics_graph_ppd">Points per dart</string>
    <string name="statistics_graph_hits">Hits per game</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="overview_facts_quadro_board">Did you know that there is also a dartboard with quadro fields? There is another ring on this board. This is four times the value.</string>
    <string name="overview_facts_million_points">Martin Petrov, threw in 137.1 hours, divided into 6 days, a total of 1.000.001 points.</string>
    <string name="overview_facts_london_tournament">In 1937, 300.000 players wanted to participate in a city tournament in London.</string>
    <string name="overview_facts_world_champoin">Phil Taylor has won most World Championship titles so far. He earned 16 titles, 14 of them in the PDC and 2 in the BDO.</string>
    <string name="overview_facts_fastest_hundret_eighty">Ricky Evans threw the fastest 180 on Live TV. For that he only needed 2.13 seconds.</string>
    <string name="overview_facts_dart_reglement">An arrow must not be longer than 30.5 centimeters. The maximum weight of an arrow may be 50 grams.</string>
    <string name="privacy_policy"><![CDATA[
<h2>Data Privacy Policy</h2>
<p>The app may be used without entering personal information. Different rules may apply to certain services on our site, however, and are explained separately below. We collect personal information from you (e.g. name, address, email address, telephone number, etc.) in accordance with the provisions of German data protection statutes. Information is considered personal if it can be associated exclusively to a specific natural person. The legal framework for data protection may be found in the German Federal Data Protection Act (BDSG) and the Telemedia Act (TMG). The provisions below serve to provide information as to the manner, extent and purpose for collecting, using and processing personal information by the provider.</p>
<p> Please be aware that data transfer via the internet is subject to security risks and, therefore, complete protection against third-party access to transferred data cannot be ensured.</p>

<h3>Use of Google Analytics with anonymization</h3>
<p>This app uses Google Analytics, a web analysis service from Google Inc., 1600 Amphitheatre Parkway, Mountain View, CA 94043 USA, hereinafter referred to as “Google“. Google Analytics employs so-called “cookies“, text files that are stored to your computer in order to facilitate an analysis of your use of the site.</p>
<p>The information generated by these cookies, such as time, place and frequency of your visits to our site, including your IP address, is transmitted to Google’s location in the US and stored there.</p>
<p>We use Google Analytics with an IP anonymization feature on our app. In doing so, Google abbreviates and thereby anonymizes your IP address before transferring it from member states of the European Union or signatory states to the Agreement on the European Economic Area.</p>
<p>Google will use this information to evaluate your usage of our site, to compile reports on app activity for us, and to provide other services related to app-&nbsp;and internet usage. Google may also transfer this information to third parties if this is required by law or to the extent this data is processed by third parties&nbsp;on Google´s behalf.</p>
<p>Google states that it will in never associate your IP address with other data held by Google. You can prevent cookies from being installed by adjusting the settings on your browser software accordingly. You should be aware, however, that by doing so you may not be able to make full use of all the functions of our app.</p>
<p>Google also offers a disabling option for the most common browsers, thus providing you with greater control over&nbsp;the data which is collected and processed by Google. If you enable this option, no information regarding your app visit is transmitted to Google Analytics. However, the activation does not prevent the transmission of information to us or to any other web analytics services we may use. For more information about the disabling option provided by Google, and how to enable this option, visit <a href="https://tools.google.com/dlpage/gaoptout?hl=de" target="_blank" rel="nofollow">https://tools.google.com/dlpage/gaoptout?hl=en</a></p>

<h3>Use of Google AdSense </h3>
<p>Our app employs Google AdSense. Google AdSense is a service of Google Inc., 1600 Amphitheatre Parkway, Mountain View, CA 94043 USA, for incorporating advertisements. Google-AdSense uses so-called “cookies“, text files, that are stored to your computer and which provide analysis of the use of our app. Furthermore, Google AdSense uses so-called “web beacons“. Web beacons allow Google to analyze information, such as visitor traffic to our app. This information, along with your IP address and the ad format displayed, is transmitted to Google in the US where it is stored and may be transferred by Google to contracting partners. However, Google does not merge your IP-address with other stored data on you. You can prevent cookies from being installed by adjusting the settings on your browser software accordingly. You should be aware, however, that by doing so you may not be able to make full use of all the functions of our app. By using our app you declare that you agree to the processing of data collected about you by Google in the manner previously described and for the purposes there specified.</p>
]]>
</string>
    <string name="like_dialog_title">Do you like the app?</string>
    <string name="like_dialog_text">If you like the app, give us a rating</string>
    <string name="like_dialog_rate">Rate</string>
    <string name="like_dialog_cancel">Cancel</string>
    <string name="recommended_checkout">Recommended Checkout</string>
    <string name="rankings_worldwide">You are ranked %1$d worldwide\n\nYour score is %2$.2f</string>
    <string name="rankings_no_score">You must complete at least one exercise before you can be ranked.</string>
    <string name="achievment_exercise_done_title_one">First exercise</string>
    <string name="achievment_exercise_done_title_multiple">Finish %d exercises</string>
    <string name="achievment_exercise_done_description_one">Finish your first exercise successful</string>
</resources>