<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_height="wrap_content"
    android:background="@drawable/black_button_background">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/dialog_new_training_title"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/dialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/dialog_new_training_text"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/newGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/black_button_background"
            android:textColor="@drawable/black_button_text_color"
            android:text="@string/dialog_new_training_new" />

        <Button
            android:id="@+id/closeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@drawable/black_button_background"
            android:textColor="@drawable/black_button_text_color"
            android:text="@string/dialog_new_training_close" />
    </LinearLayout>
</LinearLayout>