<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="sdt.tkm.at.steeldarttrainer.training.TrainingsOverViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/trainingsOverviewBanner"
        android:background="@android:color/black"
        android:orientation="vertical">

        <Button
            android:id="@+id/xoiButton"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/main_item_background"
            android:text="@string/excercise_xoi"
            android:textColor="@drawable/black_button_text_color"
            android:textSize="25sp" />

        <Button
            android:id="@+id/highscoreButton"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/main_item_background"
            android:text="@string/excercise_highscore"
            android:textColor="@drawable/black_button_text_color"
            android:textSize="25sp" />

        <Button
            android:id="@+id/dartsToXButton"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/main_item_background"
            android:text="@string/excercise_dart_to_X"
            android:textColor="@drawable/black_button_text_color"
            android:textSize="25sp" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/trainingsOverviewBanner"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_id"></com.google.android.gms.ads.AdView>
</RelativeLayout>