<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/atcOverviewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/atcRoundLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/atcDartCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_gravity="center"
                android:text="Darts: 0"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/atcScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:layout_gravity="center"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/atcRoundCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_gravity="center"
                android:text="Round: 0"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:id="@+id/atcScoreDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/atcRoundLayout"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/atcTheseDarts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_below="@+id/atcScoreDivider"
            android:layout_centerHorizontal="true"
            android:text="@string/general_current_darts"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/atcDartAmountLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/atcTheseDarts"
            android:weightSum="3">

            <TextView
                android:id="@+id/atcFirstDart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:text="-"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/atcSecondDart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:text="-"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/atcThirdDart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:text="D 8"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <View
            android:id="@+id/atcLastDartsDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/atcDartAmountLayout"
            android:background="@android:color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/atcMultiplierLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/confirmLayout"
        android:background="@android:color/black">

        <Button
            android:id="@+id/atcHit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/black_button_background"
            android:text="@string/general_hit"
            android:textColor="@drawable/black_button_text_color" />

        <Button
            android:id="@+id/atcMissButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/black_button_background"
            android:text="@string/general_miss"
            android:textColor="@drawable/black_button_text_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirmLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_above="@+id/atcBanner"
        android:background="@android:color/black">

        <Button
            android:id="@+id/atcResetButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/black_button_background"
            android:text="@string/general_reset"
            android:textColor="@drawable/black_button_text_color" />

        <Button
            android:id="@+id/atcNextButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/black_button_background"
            android:text="@string/general_next"
            android:textColor="@drawable/black_button_text_color" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/atcBanner"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_id" />
</RelativeLayout>